# biocode

./: .env.example  .gitignore  .mailmap  .pre-commit-config.yaml  CHANGELOG.md  FOLDER_STRUCTURE.md  LICENSE  Makefile  README.md  debug_colony.py  demo_biocode_flow.py  pyproject.toml  pytest.ini  run_dashboard.py  run_evolution_demo.py  run_with_python311.py  setup.py  test_import.py
.github/workflows/: quality.yml  test.yml
archive/backup/backup_before_migration/: requirements.txt  setup.py
archive/backup/backup_before_migration/examples/: integrated_simulation_demo.py
archive/backup/backup_before_migration/src/: __init__.py
archive/experiments/: controlled_ear_analysis.py
archive/old_domain_entities/: advanced_tissue.py  cell.py  organ.py  system.py  test_tissue.py  tissue.py
archive/old_files/: basic_usage.py  digital_evolution_demo.py  logging_example.py  test_biocode_agent.py  test_biocode_agent_old.py  test_biocode_colony.py  test_biocode_controlled.py  test_biocode_controlled_old.py  test_codecell.py  test_components.py  test_dashboard_only.py  test_ear_segmentation_dashboard.py  test_stem_cell.py  test_terminal_dashboard.py
archive/old_structure/components/: __init__.py  system_managers.py  tissue_components.py
archive/old_structure/core/: __init__.py
archive/old_structure/dashboard/: biocode_dashboard.py
archive/old_structure/evolution/: __init__.py  code_generator.py  digital_ecosystem.py  digital_life.py  horizontal_gene_transfer.py  self_modifying.py  sensory_system.py
archive/old_structure/security/: security_manager.py
archive/old_structure/utils/: error_handler.py  logging_config.py
config/: default.toml  development.toml  logging.yaml  production.toml  requirements.txt  setup.py  testing.toml
demos/: advanced_ecs_demo.py  aop_demo.py  ear_segmentation_demo.py  ecs_demo.py  evolution_lab_demo.py  pareto_solutions.json  report_generation_demo.py  simple_report_demo.py  unified_biocode_demo.py
deployment/docker/: Dockerfile  docker-compose.yml
docs/: AOP_FEASIBILITY_REPORT.md  ASYNC_STYLE_GUIDE.md  CODE_SMELL_GUIDE.md  ENVIRONMENT_SETUP.md  EVOLUTION_LAB_PROGRESS.md  IMMEDIATE_ACTION_PLAN.md  PARETO_HEALTH_GUIDE.md  PROJECT_STRUCTURE.md  README.md  SWARM_SEARCH_GUIDE.md  architecture_diagram.md  biological_features_analysis.md  quickstart.md
docs/api/: README.md  components.md  core.md  openapi.yaml  utils.md
docs/architecture/: ARCHITECTURE_PRINCIPLES.md  BIOCODE_ARCHITECTURE_DESIGN_GUIDE.md  CLEAN_STRUCTURE.md  PERFECT_PROJECT_STRUCTURE.md  PROJECT_STRUCTURE.md  README.md
docs/contributing/: CONTRIBUTING.md  README.md  development-setup.md  testing.md
docs/dashboard/: DASHBOARD_GUIDE.md
docs/development/: code-style.md  logging-guide.md
docs/evolution/: API_REFERENCE.md  README.md  TUTORIAL.md
docs/evolution_lab/: ADVANCED_ANALYSIS_PLAN.md  BRAINSTORM_ADVANCED_FEATURES.md  COLONY_INTELLIGENCE_BLUEPRINT.md  DASHBOARD_README.md
docs/examples/: dashboard_examples.md  use-cases.md
docs/getting-started/: README.md  installation.md  tutorial.md
docs/guides/: MIGRATION_GUIDE.md  advanced-features.md
examples/: auth_tissue_demo.py
examples/basic/: auth_demo.py
examples/demos/: demo_dashboard.py  demo_multi_colony.py  demo_self_repair.py  demo_terminal_ear.py
landing/: index.html
output/dependency_graphs/: class_graph.graphml  dependency_graphs.json  module_graph.graphml
output/examples/: report_example.html
reports/: ear_segmentation_report_20250627_113913.html  ear_segmentation_report_20250627_113927.json  ear_segmentation_report_20250627_113927.md
scripts/docs/: generate_api_docs.py
scripts/launchers/: launch_dashboard.py
scripts/migration/: import_mapping.py  migrate_to_new_structure.py
src/: __init__.py  project_analysis.json  test_evolution_lab.py
src/biocode/: __version__.py
src/biocode/aspects/: __init__.py  base.py  error_handling_aspect.py  logging_aspect.py  monitoring_aspect.py  performance_aspect.py  security_aspect.py  transaction_aspect.py  weaver.py
src/biocode/domain/: __init__.py  exceptions.py
src/biocode/ecs/: __init__.py  component.py  entity.py  system.py  world.py
src/biocode/factories/: __init__.py  cell_factory.py  organism_factory.py
src/biocode/mixins/: __init__.py  cacheable.py  enhanced_entity.py  networkable.py  observable.py  persistable.py  replicable.py  serializable.py  validatable.py  versionable.py
src/biocode/shared/: config.py  logging.py  logging_utils.py
src/components/: __init__.py  system_managers.py  tissue_components.py
src/core/: __init__.py  advanced_codetissue.py  code_organ.py  code_system.py  codecell_example.py  enhanced_codecell.py  stem_cell_system.py
src/evolution_lab/: DASHBOARD_README.md  colony.py  dashboard_demo.py  report_generator.py
src/evolution_lab/analyzers/: __init__.py  ai_model_analyzer.py  base.py  code_analyzer.py  code_embedding_analyzer.py  code_smell_analyzer.py  dependency_graph_analyzer.py  innovation_analyzer.py  performance_analyzer.py  security_analyzer.py  test_coverage_analyzer.py
src/evolution_lab/fixers/: __init__.py  smell_fixer.py
src/evolution_lab/optimizers/: __init__.py  pareto_health.py  swarm_search.py
src/monitoring/: __init__.py  performance_metrics.py
src/security/: __init__.py  security_manager.py
tests/: __init__.py  conftest.py  test_codecell.py  test_codeorgan.py  test_codesystem.py  test_codetissue.py  test_components.py  test_stem_cell.py
tests/integration/: test_api.py  test_ecs_integration.py  test_unified_demo.py
tests/misc/: test_analyzer.py
tests/unit/aspects/: __init__.py  test_logging_aspect.py  test_performance_aspect.py
tests/unit/domain/: test_value_objects.py
tests/unit/ecs/: __init__.py  test_component.py  test_entity.py  test_system.py  test_world.py
tests/unit/evolution_lab/: __init__.py  test_code_embedding_analyzer.py  test_code_smell_analyzer.py  test_dependency_graph_analyzer.py  test_pareto_health.py  test_smell_fixer.py  test_swarm_search.py
tests/unit/mixins/: __init__.py  test_observable.py  test_serializable.py
(+72 files in other folders)
